css: fix ckeditor menu overflow

--- a/frontend/global/scss/plugins/_ckeditor.scss
+++ b/frontend/global/scss/plugins/_ckeditor.scss
@@ -99,3 +99,7 @@ body.cke_editable {
 .cke_panel_listItem {
     font-size: 12px !important;
 }
+
+.cke_menu_panel {
+    overflow-x: hidden !important;
+}
